docs: add recommended Minecraft startup flags